[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromadb-zerodb"
version = "0.1.0"
description = "Chroma-compatible API backed by ZeroDB cloud. No Docker, no server, instant vector DB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "AINative Studio", email = "hello@ainative.studio" },
]
keywords = [
    "chromadb",
    "chromadb-alternative",
    "chroma-alternative",
    "vector-database",
    "vector-store",
    "embeddings",
    "semantic-search",
    "similarity-search",
    "zerodb",
    "ainative",
    "hosted-chroma",
    "cloud-vector-db",
    "free-vector-database",
    "auto-provisioning",
    "serverless",
    "no-docker",
    "pinecone-alternative",
    "qdrant-alternative",
    "weaviate-alternative",
    "milvus-alternative",
    "rag",
    "retrieval-augmented-generation",
    "claude",
    "cursor",
    "windsurf",
    "ai-database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/chromadb-zerodb"
Documentation = "https://docs.ainative.studio"
Repository = "https://github.com/AINative-Studio/chromadb-zerodb"
Issues = "https://github.com/AINative-Studio/chromadb-zerodb/issues"

[tool.hatch.build.targets.wheel]
packages = ["chromadb_zerodb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
